public/css/style.css
/* ... */
.switch-field {
	display: flex;
  position: relative;
  top: 4px;
}

.switch-field input {
	position: absolute !important;
	clip: rect(0, 0, 0, 0);
	height: 1px;
	width: 1px;
	border: 0;
	overflow: hidden;
}

.switch-field label {
	font-size: 14px;
	line-height: 1;
	text-align: center;
	padding: 8px 16px;
	margin-right: -1px;
	transition: all 0.1s ease-in-out;
}

.switch-field label:hover {
	cursor: pointer;
}

.switch-field input:checked + label {
	box-shadow: none;
}

.switch-field label:first-of-type {
	border-radius: 4px 0 0 4px;
}

.switch-field label:last-of-type {
	border-radius: 0 4px 4px 0;
}

.editable-text {
  width: 100%;
  padding: .375rem .75rem;
  border-radius: .25rem;
  font-size: 1rem;
  line-height: 1.5;
  border: 2px solid #ced4da;
  cursor: text;
  /* min-height: 2.5rem !important; */
}

.editable-text:focus {
  color: #495057;
  background-color: #fff;
  border-color: #80bdff;
  outline: 0;
  box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
}

.editable-text > p:last-child,
.editable-text > div:last-child > p
{
  margin-bottom: 0;
}

.medium-editor-element {
  min-height: 4rem !important;
}
.medium-editor-placeholder::after {
  font-style: normal !important;
  color: #6c757d;
}
.medium-editor-placeholder-relative::after {
  font-style: normal !important;
  padding: 0 !important;
  color: #6c757d;
}

#postContentWarningsContainer {
  display: none;
}

#emojiWindow,
.replyEmojiWindow {
  display: flex;
  cursor:default;
  flex-direction: row;
  justify-content: flex-start;
}

.add-emoji {
  padding: 2px 0.15rem 0 0.15rem;
  border: 1px solid transparent;
  border-radius: 4px;
  background: #fff;
}


/* Don't let emoji become italicised or bold! */
.emoji {
  font-style: normal !important;
  font-weight: 400 !important;
}
.emoji > * {
    font-style: normal;
    font-weight: 400;
}

.content-warning {
  font-weight: 500;
}

.abbreviated-content {
  height: 7rem;
  overflow: hidden;
}

.abbreviated-content:not(.content-warning-content)::after {
  content: "";
  position: absolute;
  z-index: 1;
  bottom: 3rem;
  left: 0;
  pointer-events: none;
  width: 100%;
  height: 1rem;
}

.show-more,
.content-warning-show-more {
  text-transform: uppercase;
  font-size: smaller;
  padding: 0 5px;
  border-radius: 4px;
  display: block;
  width: 100px;
  text-align: center;
  cursor: pointer;
}

.show-more {
  margin: 1rem auto;
}

.content-warning-show-more {
  margin: 0 auto 1rem auto;
}
/*
.post-meta {
  margin-left: 3px;
  justify-content: space-between;
  display: flex;
  flex-direction: column;
  overflow: none;
  flex: 1;
}

.post-meta>p {
  margin: 0;
  height: 23px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  width: 90%;
} */

.comment-header,
.post-header {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  width: 100%;
}
.comment-header-row-1,
.post-header-row-1 {
  display: flex;
  overflow: hidden;
}
.comment-header-row-1>*{
  align-self: center;
}
.comment-header-divider {
  padding: 0 5px;
}
.commentTimestamp {
  white-space: nowrap;
}
.comment-button {
  position: relative;
  top: 2px;
}

.comment-button:hover {
  text-decoration: none;
}
.replyToComment {
  padding: 0 10px;
}
.deleteComment {
  padding: 0;
  flex: 1;
  text-align: right;
}
.author-username {
  white-space: nowrap;
}
.author-display-name {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  margin-right: 5px;
}
.user-flag {
  padding: 0 5px;
}
.post-header .user-flag {
  position: relative;
  top: 3px;
}

.show-more-content {
  display: none;
}

.custom-file-container {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 200px;
  width: 45%;
  position: relative;
  margin-top: 1rem !important;
  margin-bottom: 0.5rem !important;
 }

 .newimagecont {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 200px;
  width: 100%;
  position: relative;
  margin-top: 1rem !important;
  margin-bottom: 0.5rem !important;
 }

.image-preview {
  overflow: hidden;
  transition: all 0.2s ease;
  height: 100%;
  width: 45%;
  border-radius: 4px;
  background-size: contain;
  background-position:center;
  background-repeat: no-repeat;
  background-image:url("/images/imagePreviewWindowDefault.jpg");
  /*border moved to colors*/
  margin: 0 2.5%;
  object-fit: contain;
  border-radius: 6px;
  display: inline-block;
}

#postImageUpload {
  display: none;
}

#imagePreviewContainer {
  display: none;
  text-align: center;
}

#postImageDescription {
  position: absolute;
  display: inline-block;
  transition: all 0.2s ease;
  height: 100%;
  width: 45%;
  margin: 0 2.5%;
  text-align: left;
}

.post-images {
  display: grid;
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  max-height: 400px;
}

.post-images a {
  min-height: 100%;
}

.post-single-image,
.post-single-image > img {
  object-fit: cover;
  cursor: pointer;
  width: 100%;
  height: 100%;
  max-height: 400px;
  transition: border 100ms ease-in;
}

.post-images.one-image {
  background-image: linear-gradient(45deg, #fff5f9 25%, #ffffff 25%, #ffffff 50%, #fff5f9 50%, #fff5f9 75%, #ffffff 75%, #ffffff 100%);
background-size: 5.66px 5.66px;
  grid-template-columns: 100%;
  grid-template-rows: 100%;
}

.post-images.one-image > img {
  object-fit: contain;
}

.post-images.two-images {
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 100%;
}

.post-images.three-images,
.post-images.four-images {
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.post-images.three-images > *:first-child {
  grid-row-end: span 2;
}

/* .post-single-image {
  max-width: 100%;
  margin: 0 0 1rem 0;
  border-radius: 6px;
  max-height: 300px;
  object-fit: contain;
  cursor: pointer;
} */

.image-clear {
    border-radius: 90%;
    width: 1.5em;
    font-size: 2em;
    text-align: center;
    position: absolute;
    right: 57%;
    top: 20px;
}



.community-container {
  display: none;
}

#mainBody {
  display: block;
}

.editor-container {
  display: none;
}
/* ... */

